# KaggleX_cohort3

./: Procfile  README.md  ZNI.ipynb  analysis.py  app.py  dash_app.py  pyproject.toml  requirements.txt  visualize.py  zni-energy.ipynb
Learning/: pandas-datacleaning.ipynb
datasets/: zni_data.py
datasets/Colombia_GISdata_LTAy_YearlyMonthlyTotals_GlobalSolarAtlas-v2_GEOTIFF/: DIF.tif.aux.xml  DIF.tif.xml  DNI.tif.aux.xml  DNI.tif.xml  GHI.tif.aux.xml  GHI.tif.xml  GTI.tif.aux.xml  GTI.tif.xml  OPTA.tif  OPTA.tif.aux.xml  OPTA.tif.xml  PVOUT.tif  PVOUT.tif.aux.xml  PVOUT.tif.xml  TEMP.tif  TEMP.tif.aux.xml  TEMP.tif.xml
datasets/Colombia_GISdata_LTAy_YearlyMonthlyTotals_GlobalSolarAtlas-v2_GEOTIFF/monthly/: PVOUT_01.tif  PVOUT_01.tif.aux.xml  PVOUT_01.tif.xml  PVOUT_02.tif  PVOUT_02.tif.aux.xml  PVOUT_02.tif.xml  PVOUT_03.tif  PVOUT_03.tif.aux.xml  PVOUT_03.tif.xml  PVOUT_04.tif  PVOUT_04.tif.aux.xml  PVOUT_04.tif.xml  PVOUT_05.tif  PVOUT_05.tif.aux.xml  PVOUT_05.tif.xml  PVOUT_06.tif  PVOUT_06.tif.aux.xml  PVOUT_06.tif.xml  PVOUT_07.tif  PVOUT_07.tif.aux.xml  PVOUT_07.tif.xml  PVOUT_08.tif  PVOUT_08.tif.aux.xml  PVOUT_08.tif.xml  PVOUT_09.tif  PVOUT_09.tif.aux.xml  PVOUT_09.tif.xml  PVOUT_10.tif  PVOUT_10.tif.aux.xml  PVOUT_10.tif.xml  PVOUT_11.tif  PVOUT_11.tif.aux.xml  PVOUT_11.tif.xml  PVOUT_12.tif  PVOUT_12.tif.aux.xml  PVOUT_12.tif.xml
