[tool.poetry]
name = "kaggle-x"
version = "0.1.0"
description = ""
authors = ["Andrea Franco <andrefrak@hotmail.com>"]
readme = "README.md"
packages = [{include = "kaggle_x"}]

[tool.poetry.dependencies]
python = "3.10.0"
numpy = "^1.25.2"
pandas = "^2.1.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.2"
scipy = "^1.11.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
mlxtend = "^0.22.0"
fuzzywuzzy = "^0.18.0"
streamlit = "^1.27.2"
streamlit-option-menu = "^0.3.6"
toml-to-requirements = "^0.2.0"
plotly = "^5.17.0"
dash = "^2.14.0"
gunicorn = "^21.2.0"
geopandas = "^0.14.0"
rasterio = "^1.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
